[gd_scene load_steps=4 format=3 uid="uid://cnp2eaodeq37t"]

[ext_resource type="PackedScene" uid="uid://cnvfcqqhax6hi" path="res://scenes/gameloop/TopView.tscn" id="1_hbgqk"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_yicp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtxa4"]
size = Vector2(162, 541)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_yicp2")

[node name="TopView" parent="." instance=ExtResource("1_hbgqk")]
position = Vector2(-3789, -42)
scale = Vector2(4, 4)

[node name="CanvasModulate" type="CanvasModulate" parent="TopView"]
position = Vector2(947.25, 10.5)
scale = Vector2(0.25, 0.25)
color = Color(0.48, 0.48, 0.48, 1)

[node name="DeleteArea" type="Area2D" parent="."]
position = Vector2(-463, 481)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeleteArea"]
shape = SubResource("RectangleShape2D_gtxa4")

[connection signal="enemie_spawned" from="TopView" to="." method="_on_top_view_enemie_spawned"]
[connection signal="area_entered" from="DeleteArea" to="." method="_on_delete_area_area_entered"]
